# fence_inspection_using_drones

./: .gitignore  README.md
deep_learning/: R_cnn.py  (+4 more)
eit_playground/: CMakeLists.txt  README.md  package.xml  setup_gazebo.bash
eit_playground/init.d-posix/: 6014_sdu_drone
eit_playground/launch/: ROS_framwork.launch  gazeboSIM_v1.0.launch  gazeboSIM_v2.0.launch  posix.launch  single_vehicle_spawn.launch  uav_controller.launch  uav_sitl.launch
eit_playground/mission_files/: mission_00.txt
eit_playground/models/Vestas_V52/: model.config  model.sdf
eit_playground/models/fences_with_holes/: model.config  model.sdf
eit_playground/models/fences_without_holes/: model.config  model.sdf
eit_playground/models/grey_wall_long/: model.config  model.sdf
eit_playground/models/hca_plane/: model.config  model.sdf
eit_playground/models/iris/: model.config
eit_playground/models/ocean_vessel/: model.config  model.sdf
eit_playground/models/rockwool_24_24_200/: model.config  model.sdf
eit_playground/models/sdu_mono_cam/: model.sdf
eit_playground/models/tanker_ship/: model.config  model.sdf
eit_playground/scripts/: offb_posctl.py
eit_playground/src/: droneCore.py  droneCoreV2.py  fence_breach_detection.py  groundControlNode.py  loiterPilot.py  messageControl.py  missionControl.py  missionReader.py  offb_node.cpp  systemTest.py
eit_playground/worlds/: empty.world  hca_airport.world  hca_airport_fence_with_holes.world  ocean.world  optitrack.world  optitrack_fence_with_holes.world  optitrack_fence_without_holes.world  rockwool.world  warehouse.world
(+568 files in other folders)
